Update index.html and style.css

--- a/index.html
+++ b/index.html
@@ -3,11 +3,64 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Doe Sangue</title>
+        <title>Doe Sangue! Doe Vida!</title>
+        <link href="https://fonts.googleapis.com/css?family=Oxanium:300,400,600,700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="css/reset.css">
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
+        <header class="header">
+            <div class="container">
+                <h1>DOE</h1>
+                <h2>A sua doação importa</h2>
+                <p>Até 3 vidas com 1 doação</p>
+                <p>Mais de 38.000 doações são necessárias todos os dias</p>
+                <p>Apenas 1,9% da população brasileira, doa sangue.</p>
+                <button class="btn-primary">Quero Ajudar!</button>
+            </div>
+        </header>
+
+        <main class="main">            
+            <div class="container">     
+                <section class="section-form">
+                    <h3>Entre para a lista de doadores</h3>
+                    <form action="/">
+                        <input type="text" placeholder="Nome Completo">
+                        <input type="email" placeholder="Email">
+                        <input type="text" placeholder="Tipo Sanguineo">
+                        <button class="btn-form">Quero Ajudar!</button>
+                    </form>
+                </section>
+
+                <section class="section-donators">
+                    <div class="container">
+                        <h2>Últimos <span>doadores</span></h2>
+                        <div class="donators">
+                            <div class="donate">
+                                <div class="blood">AB+</div>
+                                <p>Diego Batista</p>        
+                            </div>
+                            <div class="donate">
+                                <div class="blood">B+</div>
+                                <p>Fernando Diego</p>        
+                            </div>
+                            <div class="donate">
+                                <div class="blood">A+</div>
+                                <p>Silva Diego</p>        
+                            </div>
+                            <div class="donate">
+                                <div class="blood">O+</div>
+                                <p>Batista Fernando</p>        
+                            </div>
+                        </div>
+                    </div>
+                </section>
+            </div>
+        </main>       
+
+        <footer class="footer">
+            <p>Com ❤ Diego Batista</p>
+        </footer>
         
     </body>
 </html>
