Update index.html and style.css

--- a/index.html
+++ b/index.html
@@ -28,32 +28,30 @@
                         <input type="text" placeholder="Nome Completo">
                         <input type="email" placeholder="Email">
                         <input type="text" placeholder="Tipo Sanguineo">
-                        <button class="btn-form">Quero Ajudar!</button>
+                        <button>Quero Ajudar!</button>
                     </form>
                 </section>
 
-                <section class="section-donators">
-                    <div class="container">
-                        <h2>Últimos <span>doadores</span></h2>
-                        <div class="donators">
-                            <div class="donate">
-                                <div class="blood">AB+</div>
-                                <p>Diego Batista</p>        
-                            </div>
-                            <div class="donate">
-                                <div class="blood">B+</div>
-                                <p>Fernando Diego</p>        
-                            </div>
-                            <div class="donate">
-                                <div class="blood">A+</div>
-                                <p>Silva Diego</p>        
-                            </div>
-                            <div class="donate">
-                                <div class="blood">O+</div>
-                                <p>Batista Fernando</p>        
-                            </div>
+                <section class="section-donators">                    
+                    <h2>Últimos <span>doadores</span></h2>
+                    <div class="donators">
+                        <div class="donate">
+                            <div class="blood">AB+</div>
+                            <p>Diego Batista</p>        
                         </div>
-                    </div>
+                        <div class="donate">
+                            <div class="blood">B+</div>
+                            <p>Fernando Diego</p>        
+                        </div>
+                        <div class="donate">
+                            <div class="blood">A+</div>
+                            <p>Silva Diego</p>        
+                        </div>
+                        <div class="donate">
+                            <div class="blood">O+</div>
+                            <p>Batista Fernando</p>        
+                        </div>
+                    </div>                    
                 </section>
             </div>
         </main>       
