--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <body>
         <header class="header">
             <div class="container">
-                <h1>DOE</h1>
+                <img src="img/logo.png" alt="LOGO DOE">
                 <h2>A sua doação importa</h2>
                 <p>Até 3 vidas com 1 doação</p>
                 <p>Mais de 38.000 doações são necessárias todos os dias</p>
