Update style.css and add script.js

--- a/index.html
+++ b/index.html
@@ -59,6 +59,8 @@
         <footer class="footer">
             <p>Com ❤ Diego Batista</p>
         </footer>
-        
+
+        <!-- SCRIPT -->
+        <script src="js/script.js"></script>        
     </body>
 </html>
