--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <body>
         <header class="header">
             <div class="container">
-                <img src="img/logo.png" alt="LOGO DOE">
+                <img class="logo" src="img/logo.png" alt="LOGO DOE">
                 <h2>A sua doação importa</h2>
                 <p>Até 3 vidas com 1 doação</p>
                 <p>Mais de 38.000 doações são necessárias todos os dias</p>
@@ -22,7 +22,7 @@
 
         <main class="main">            
             <div class="container">     
-                <section class="section-form">
+                <section class="section-form hide">
                     <h3>Entre para a lista de doadores</h3>
                     <form action="/">
                         <input type="text" placeholder="Nome Completo">
