--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Doe Sangue! Doe Vida!</title>
         <link href="https://fonts.googleapis.com/css?family=Oxanium:300,400,600,700&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="css/reset.css">
-        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="public/reset.css">
+        <link rel="stylesheet" href="public/style.css">
     </head>
     <body>
         <header class="header">
             <div class="container">
-                <img class="logo" src="img/logo.png" alt="LOGO DOE">
+                <img class="logo" src="public/logo.png" alt="LOGO DOE">
                 <h2>A sua doação importa</h2>
                 <p>Até 3 vidas com 1 doação</p>
                 <p>Mais de 38.000 doações são necessárias todos os dias</p>
@@ -61,6 +61,6 @@
         </footer>
 
         <!-- SCRIPT -->
-        <script src="js/script.js"></script>        
+        <script src="public/script.js"></script>        
     </body>
 </html>
