--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Doe Sangue! Doe Vida!</title>
         <link href="https://fonts.googleapis.com/css?family=Oxanium:300,400,600,700&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="public/reset.css">
-        <link rel="stylesheet" href="public/style.css">
+        <link type="text/css" rel="stylesheet" href="/reset.css">
+        <link type="text/css" rel="stylesheet" href="/style.css">
     </head>
     <body>
         <header class="header">
             <div class="container">
-                <img class="logo" src="public/logo.png" alt="LOGO DOE">
+                <img class="logo" src="/logo.png" alt="LOGO DOE">
                 <h2>A sua doação importa</h2>
                 <p>Até 3 vidas com 1 doação</p>
                 <p>Mais de 38.000 doações são necessárias todos os dias</p>
@@ -24,7 +24,7 @@
             <div class="container">     
                 <section class="section-form hide">
                     <h3>Entre para a lista de doadores</h3>
-                    <form action="/">
+                    <form action="/" method="POST">
                         <input type="text" placeholder="Nome Completo">
                         <input type="email" placeholder="Email">
                         <input type="text" placeholder="Tipo Sanguineo">
@@ -35,22 +35,13 @@
                 <section class="section-donators">                    
                     <h2>Últimos <span>doadores</span></h2>
                     <div class="donators">
-                        <div class="donate">
-                            <div class="blood">AB+</div>
-                            <p>Diego Batista</p>        
-                        </div>
-                        <div class="donate">
-                            <div class="blood">B+</div>
-                            <p>Fernando Diego</p>        
-                        </div>
-                        <div class="donate">
-                            <div class="blood">A+</div>
-                            <p>Silva Diego</p>        
-                        </div>
-                        <div class="donate">
-                            <div class="blood">O+</div>
-                            <p>Batista Fernando</p>        
-                        </div>
+
+                        {% for donate in donators %}
+                            <div class="donate">
+                                <div class="blood">{{donate.blood}}</div>
+                                <p>{{donate.name}}</p>        
+                            </div>    
+                        {%endfor%}                    
                     </div>                    
                 </section>
             </div>
@@ -61,6 +52,6 @@
         </footer>
 
         <!-- SCRIPT -->
-        <script src="public/script.js"></script>        
+        <script type="text/javascript" src="/script.js"></script>        
     </body>
 </html>
